include/dss_capi.h

    /*
    Set kvar for active Load. Updates PF based in present kW.
    */
    DSS_CAPI_DLL double Loads_Get_kvar(void);
    /*
    Set kW for active Load. Updates kvar based on present PF.
    */
    DSS_CAPI_DLL double Loads_Get_kW(void);
    /*
    Set Power Factor for Active Load. Specify leading PF as negative. Updates kvar based on kW value
    */
    DSS_CAPI_DLL double Loads_Get_PF(void);
    /*
    Set kV rating for active Load. For 2 or more phases set Line-Line kV. Else actual kV across terminals.
    */
    DSS_CAPI_DLL void Loads_Set_kV(double Value);
    /*
    Set kvar for active Load. Updates PF based on present kW.
    */
    DSS_CAPI_DLL void Loads_Set_kvar(double Value);
    /*
    Set kW for active Load. Updates kvar based on present PF.
    */
    DSS_CAPI_DLL void Loads_Set_kW(double Value);
    /*
    Set Power Factor for Active Load. Specify leading PF as negative. Updates kvar based on present value of kW.
    */
    DSS_CAPI_DLL void Loads_Set_PF(double Value);
    /*
    Number of Load objects in active circuit.
    */
    DSS_CAPI_DLL int32_t Loads_Get_Count(void);
    /*
    Factor for allocating loads by connected xfkva
    */
    DSS_CAPI_DLL double Loads_Get_AllocationFactor(void);
    /*
    Factor relates average to peak kw.  Used for allocation with kwh and kwhdays/
    */
    DSS_CAPI_DLL double Loads_Get_Cfactor(void);
    DSS_CAPI_DLL int32_t Loads_Get_Class_(void);
    /*
    Name of a loadshape with both Mult and Qmult, for CVR factors as a function of time.
    */
    DSS_CAPI_DLL char* Loads_Get_CVRcurve(void);
    /*
    Percent reduction in Q for percent reduction in V. Must be used with LoadModelCVR.
    */
    DSS_CAPI_DLL double Loads_Get_CVRvars(void);
    /*
    Percent reduction in P for percent reduction in V. Must be used with LoadModelCVR.
    */
    DSS_CAPI_DLL double Loads_Get_CVRwatts(void);
    /*
    Name of the loadshape for a daily load profile.
    */
    DSS_CAPI_DLL char* Loads_Get_daily(void);
    /*
    Name of the loadshape for a duty cycle simulation.
    */
    DSS_CAPI_DLL char* Loads_Get_duty(void);
    /*
    Name of the growthshape curve for yearly load growth factors.
    */
    DSS_CAPI_DLL char* Loads_Get_Growth(void);
    /*
    Delta loads are connected line-to-line.
    */
    DSS_CAPI_DLL uint16_t Loads_Get_IsDelta(void);
    /*
    Base load kva. Also defined kw and kvar or pf input, or load allocation by kwh or xfkva.
    */
    DSS_CAPI_DLL double Loads_Get_kva(void);
    /*
    kwh billed for this period. Can be used with Cfactor for load allocation.
    */
    DSS_CAPI_DLL double Loads_Get_kwh(void);
    /*
    Length of kwh billing period for average demand calculation. Default 30.
    */
    DSS_CAPI_DLL double Loads_Get_kwhdays(void);
    /*
    The Load Model defines variation of P and Q with voltage.
    */
    DSS_CAPI_DLL int32_t Loads_Get_Model(void);
    /*
    Number of customers in this load, defaults to one.
    */
    DSS_CAPI_DLL int32_t Loads_Get_NumCust(void);
    /*
    Average percent of nominal load in Monte Carlo studies; only if no loadshape defined for this load.
    */
    DSS_CAPI_DLL double Loads_Get_PctMean(void);
    /*
    Percent standard deviation for Monte Carlo load studies; if there is no loadshape assigned to this load.
    */
    DSS_CAPI_DLL double Loads_Get_PctStdDev(void);
    /*
    Neutral resistance for wye-connected loads.
    */
    DSS_CAPI_DLL double Loads_Get_Rneut(void);