src/v8/CAPI_Loads.pas


end;
//------------------------------------------------------------------------------
function Loads_Get_kvar(): Double; CDECL;
begin
    Result := 0.0;
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        with ActiveCircuit[ActiveActor].Loads do
        begin
            if ActiveIndex <> 0 then
            begin
                Result := TLoadObj(Active).kvarBase;
            end;
        end;
    end;
end;
//------------------------------------------------------------------------------
function Loads_Get_kW(): Double; CDECL;
begin
    Result := 0.0;
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        with ActiveCircuit[ActiveActor].Loads do
        begin
            if ActiveIndex <> 0 then
            begin
                Result := TLoadObj(Active).kWBase;
            end;
        end;
    end;
end;
//------------------------------------------------------------------------------
function Loads_Get_PF(): Double; CDECL;
begin
    Result := 0.0;
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        with ActiveCircuit[ActiveActor].Loads do
        begin
            if ActiveIndex <> 0 then
            begin
                Result := TLoadObj(Active).PFNominal;
            end;
        end;
    end;
end;
//------------------------------------------------------------------------------
procedure Loads_Set_kV(Value: Double); CDECL;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        with ActiveCircuit[ActiveActor].Loads do
        begin
            if ActiveIndex <> 0 then
            begin
                TLoadObj(Active).kVLoadBase := Value;
                TLoadObj(Active).UpdateVoltageBases;  // side effects
            end;
        end;
    end;
end;
//------------------------------------------------------------------------------
procedure Loads_Set_kvar(Value: Double); CDECL;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        with ActiveCircuit[ActiveActor].Loads do
        begin
            if ActiveIndex <> 0 then
            begin
                TLoadObj(Active).kvarBase := Value;
                TLoadObj(Active).LoadSpecType := 1;
                TLoadObj(Active).RecalcElementData(ActiveActor);  // set power factor based on kW, kvar
            end;
        end;
    end;
end;
//------------------------------------------------------------------------------
procedure Loads_Set_kW(Value: Double); CDECL;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        with ActiveCircuit[ActiveActor].Loads do
        begin
            if ActiveIndex <> 0 then
            begin
                TLoadObj(Active).kWBase := Value;
                TLoadObj(Active).LoadSpecType := 0;
                TLoadObj(Active).RecalcElementData(ActiveActor); // sets kvar based on kW and pF
            end;
        end;
    end;
end;
//------------------------------------------------------------------------------
procedure Loads_Set_PF(Value: Double); CDECL;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        with ActiveCircuit[ActiveActor].Loads do
        begin
            if ActiveIndex <> 0 then
            begin
                TLoadObj(Active).PFNominal := Value;
                TLoadObj(Active).LoadSpecType := 0;
                TLoadObj(Active).RecalcElementData(ActiveActor); //  sets kvar based on kW and pF
            end;
        end;
    end;
end;
//------------------------------------------------------------------------------
function Loads_Get_Count(): Integer; CDECL;
begin
    if Assigned(ActiveCircuit[ActiveActor]) then
        Result := ActiveCircuit[ActiveActor].Loads.ListSize;
end;
//------------------------------------------------------------------------------
function Loads_Get_AllocationFactor(): Double; CDECL;
var
    elem: TLoadObj;
begin
    Result := 0.0;
    elem := ActiveLoad;
    if elem <> NIL then
        Result := elem.AllocationFactor;
end;
//------------------------------------------------------------------------------
function Loads_Get_Cfactor(): Double; CDECL;
var
    elem: TLoadObj;
begin
    Result := 0.0;
    elem := ActiveLoad;
    if elem <> NIL then
        Result := elem.CFactor;
end;
//------------------------------------------------------------------------------
function Loads_Get_Class_(): Integer; CDECL;
var
    elem: TLoadObj;
begin
    Result := 0;
    elem := ActiveLoad;
    if elem <> NIL then
        Result := elem.LoadClass;
end;
//------------------------------------------------------------------------------
function Loads_Get_CVRcurve_AnsiString(): Ansistring; inline;
var
    elem: TLoadObj;
begin
    Result := '';
    elem := ActiveLoad;
    if elem <> NIL then
        Result := elem.CVRshape;
end;

function Loads_Get_CVRcurve(): PAnsiChar; CDECL;
begin
    Result := DSS_GetAsPAnsiChar(Loads_Get_CVRcurve_AnsiString());
end;
//------------------------------------------------------------------------------
function Loads_Get_CVRvars(): Double; CDECL;
var
    elem: TLoadObj;
begin
    Result := 0.0;
    elem := ActiveLoad;
    if elem <> NIL then
        Result := elem.CVRvars;
end;
//------------------------------------------------------------------------------
function Loads_Get_CVRwatts(): Double; CDECL;
var
    elem: TLoadObj;
begin
    Result := 0.0;
    elem := ActiveLoad;
    if elem <> NIL then
        Result := elem.CVRwatts;
end;
//------------------------------------------------------------------------------
function Loads_Get_daily_AnsiString(): Ansistring; inline;
var
    elem: TLoadObj;
begin
    Result := '';
    elem := ActiveLoad;
    if elem <> NIL then
        Result := elem.DailyShape;
end;

function Loads_Get_daily(): PAnsiChar; CDECL;
begin
    Result := DSS_GetAsPAnsiChar(Loads_Get_daily_AnsiString());
end;
//------------------------------------------------------------------------------
function Loads_Get_duty_AnsiString(): Ansistring; inline;
var
    elem: TLoadObj;
begin
    Result := '';
    elem := ActiveLoad;
    if elem <> NIL then
        Result := elem.DailyShape;
end;

function Loads_Get_duty(): PAnsiChar; CDECL;
begin
    Result := DSS_GetAsPAnsiChar(Loads_Get_duty_AnsiString());
end;
//------------------------------------------------------------------------------
function Loads_Get_Growth_AnsiString(): Ansistring; inline;
var
    elem: TLoadObj;
begin
    Result := '';
    elem := ActiveLoad;
    if elem <> NIL then
        Result := elem.GrowthShape;
end;

function Loads_Get_Growth(): PAnsiChar; CDECL;
begin
    Result := DSS_GetAsPAnsiChar(Loads_Get_Growth_AnsiString());
end;
//------------------------------------------------------------------------------
function Loads_Get_IsDelta(): Wordbool; CDECL;
var
    elem: TLoadObj;
begin
    Result := FALSE;
    elem := ActiveLoad;
    if elem <> NIL then
        if elem.Connection > 0 then
            Result := TRUE;
end;
//------------------------------------------------------------------------------
function Loads_Get_kva(): Double; CDECL;
var
    elem: TLoadObj;
begin
    Result := 0.0;
    elem := ActiveLoad;
    if elem <> NIL then
        Result := elem.kVABase;
end;
//------------------------------------------------------------------------------
function Loads_Get_kwh(): Double; CDECL;
var
    elem: TLoadObj;
begin
    Result := 0.0;
    elem := ActiveLoad;
    if elem <> NIL then
        Result := elem.kWh;
end;
//------------------------------------------------------------------------------
function Loads_Get_kwhdays(): Double; CDECL;
var
    elem: TLoadObj;
begin
    Result := 0.0;
    elem := ActiveLoad;
    if elem <> NIL then
        Result := elem.kWhDays;
end;
//------------------------------------------------------------------------------
function Loads_Get_Model(): Integer; CDECL;
var
    elem: TLoadObj;
begin
    Result := dssLoadConstPQ;
    elem := ActiveLoad;
    if elem <> NIL then
    begin
        case elem.FLoadModel of
            1:
                Result := dssLoadConstPQ;
            2:
                Result := dssLoadConstZ;
            3:
                Result := dssLoadMotor;
            4:
                Result := dssLoadCVR;
            5:
                Result := dssLoadConstI;
            6:
                Result := dssLoadConstPFixedQ;
            7:
                Result := dssLoadConstPFixedX;
            8:
                Result := dssLoadZIPV;
        end;
    end;
end;
//------------------------------------------------------------------------------
function Loads_Get_NumCust(): Integer; CDECL;
var
    elem: TLoadObj;
begin
    Result := 0;
    elem := ActiveLoad;
    if elem <> NIL then
        Result := elem.NumCustomers;
end;
//------------------------------------------------------------------------------
function Loads_Get_PctMean(): Double; CDECL;
var
    elem: TLoadObj;
begin
    Result := 0.0;
    elem := ActiveLoad;
    if elem <> NIL then
        Result := elem.puMean * 100.0;
end;
//------------------------------------------------------------------------------
function Loads_Get_PctStdDev(): Double; CDECL;
var
    elem: TLoadObj;
begin
    Result := 0.0;
    elem := ActiveLoad;
    if elem <> NIL then
        Result := elem.puStdDev * 100.0;
end;
//------------------------------------------------------------------------------
function Loads_Get_Rneut(): Double; CDECL;
var
    elem: TLoadObj;
begin
    Result := 0.0;
    elem := ActiveLoad;
    if elem <> NIL then
        Result := elem.Rneut;
end;
//------------------------------------------------------------------------------
function Loads_Get_Spectrum_AnsiString(): Ansistring; inline;
var
    elem: TLoadObj;
begin
    Result := '';
    elem := ActiveLoad;
    if elem <> NIL then
        Result := elem.Spectrum;
end;
